--- a/cocktailfinder/templates/drinks/savedDrinks.html
+++ b/cocktailfinder/templates/drinks/savedDrinks.html
@@ -1,21 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content%}
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <img src="https://www.thecocktaildb.com/images/media/drink/5noda61589575158.jpg" style="width:100px; height:100pc=x" class="img-fluid rounded-start" alt="...">
+  {% for drink in savedDrinks %}
+    <div class="card" style="width: 18rem;">
+      <img src={{drink.imageUrl}} class="card-img-top" alt={{dirnk.name}}>
+      <div class="card-body">
+        <h5 class="card-title">{{drink.name}}</h5>
+        <p class="card-text">{{drink.instructions}}</p>
       </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">Margarita</h5>
-          <p class="card-text">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+      <div style="display: flex; flex-direction:row; justify-content:center">
+        <ul class="list-group list-group-flush">
+          {% for portion in drink.getIngredientPortions %}
+          <li class="list-group-item">{{portion}}</li>
+          {% endfor %}
+        </ul>
+        <ul class="list-group list-group-flush">
+          {% for item in drink.getIngredients %}
+          <li class="list-group-item">{{item}}</li>
+          {% endfor %}
+        </ul>  
+      </div>
+          
+      <div class="card-body">
+        <a href="add-note/{{drink.drinkId}}" class="card-link">Add note</a>
+        <a href="#" class="card-link">Delete</a>
       </div>
     </div>
-  </div>
-  {% if test%}
-  <h1>{{test}}</h1>
-  {% endif %}
+  {% endfor %}
 {% endblock %}
