--- a/cocktailfinder/templates/drinks/savedDrinks.html
+++ b/cocktailfinder/templates/drinks/savedDrinks.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content%}
+<h1>Saved Drinks</h1>
+{% if savedDrinks %}
   {% for drink in savedDrinks %}
     <div class="card" style="width: 18rem;">
       <img src={{drink.imageUrl}} class="card-img-top" alt={{dirnk.name}}>
@@ -23,8 +25,11 @@
           
       <div class="card-body">
         <a href="add-note/{{drink.drinkId}}" class="card-link">Add note</a>
-        <a href="#" class="card-link">Delete</a>
+        <a href="delete-drink/{{drink.drinkId}}" class="card-link">Delete</a>
       </div>
     </div>
   {% endfor %}
+{% else%}
+    <h6>No saved drinks yet...</h6>
+{% endif%}  
 {% endblock %}
